# aapp-mart

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prompt.yml  .version  404.html  ACKNOWLEDGEMENTS.md  AUTHORS  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  DISCLAIMER.md  Dockerfile  ETHICS.md  GOVERNANCE.md  INSTALL.md  LICENSE‑3RD‑PARTY.md  MAINTAINERS  MANIFEST.in  Makefile  Manifest.json  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  SBOM.md  SECURITY.md  SECURITY_SCANNER.md  SUPPORT.md  VERSION  _config.yml  bandit.yaml  (+20 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: architecture_review.yml  bug_report.md  feature_request.md  good-first-issue.md‎  good_first_issue.md  security_issue.yml
.github/workflows/: azure-kubernetes-service-helm.yml  ci.yml  codeql.yml  coverage.yml  defender-for-devops.yml  dependency-review.yml  devskim.yml  docker-image.yml  docker-publish.yml  eslint.yml  generator-generic-ossf-slsa3-publish.yml  lint.yml  makefile.yml  models-demo.yml  ossar.yml  publish.yml  pylint.yml  python-app.yml  python-package-conda.yml  python-package.yml  python-publish.yml  release-drafter.yml  release.yml  secret-scan.yml  secret-scanning.yml  security.yml  stale.yml  test.yml  trivy.yml
.well-known/: security.txt
aappmart/cli/: aappmart_cli.py
aappmart/core/: orchestrator.py  pipeline.py  simulation_engine.py  utils.py
demo/: README.md  advanced_attack_simulation.py  advanced_attack_simulation_demo.py  attack_report_192.168.1.10.json  attack_simulation_demo.py
demo/reports/: attack_report.json
docs/: ARCHITECTURE.md  CONCEPTS.md  FAQ.md  FEATURES.md  PrivacyPolicy.md  README.md  TermsOfService.md  agents.md  api_reference.md  architecture.md  benchmark.md  cli.md  components.md  concepts.md  deployment.md  development.md  ethical_use.md  examples.md  faq.md  glossary.md  index.md  installation.md  licensing_model.md  modules.md  overview.md  prediction_engine.md  predictors.md  research.md  risk_model.md  roadmap.md  testing.md  threat_model.md  troubleshooting.md
docs/Legal/: CookiePolicy.md  TermsOfService.md  cookie-policy.md  ethics.md  privacy-policy.md  privacy.md  terms-of-service.md  terms.md
docs/ai/: attack-path-prediction-engine.md  autonomous-attack-path-prediction.md  models.md  prediction-engine.md  prediction_engine.md  predictors.md  risk-model.md
docs/architecture/: architecture-diagram.md  architecture.md  components.md  design.md  diagram.md  modules.md  threat-model.md
docs/concepts/: agents.md  concepts.md  features.md  prediction_engine.md  predictors.md
docs/ethics/: ethical_use.md
docs/executive/: executive-summary.md  faq.md  overview.md  positioning.md  vision.md
docs/getting-started/: getting-started.md  quickstart.md
docs/guides/: TESTING.md  cli.md  deployment.md  development.md  installation.md  quickstart.md  testing.md  troubleshooting.md  usage.md
docs/legal/: cookie-policy.md  ethics.md  privacy-policy.md  terms-of-service.md
docs/product/: differentiators.md  examples.md  features.md  overview.md  what-is-aapp-mart.md
docs/reference/: api-reference.md  api_reference.md  licensing-model.md  licensing.md  licensing_model.md  references.md
docs/research/: benchmark.md  research.md
docs/start-here/: what-is-aapp-mart.md
examples/: aapp_mart_attack_path_demo.ipynb  demo_notebook.ipynb
examples/notebooks/: demo.py
src/aapp_mart/aapp/: analyzer.py  graph_builder.py
src/aapp_mart/agents/custom/: __init__.py
src/aapp_mart/cli/: aappmart_cli.py
src/aapp_mart/common/: config.py  logger.py
src/aappmart/cli/: __init__.py
start-here/: what-is-aapp-mart.md  what-is-this.md
tests/: test_config.py
