[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aapp-mart"
version = "0.4.0"
description = "Autonomous Attack Path Prediction & Multi-Agent Red Team Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
  { name = "secwexen" }
]

keywords = ["attack-path", "red-team", "multi-agent", "cybersecurity", "simulation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache-2.0 License",
  "Operating System :: OS Independent"
]

dependencies = [
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.5.0",
  "joblib>=1.3",
  "graphviz>=0.20",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "anyio>=4.2",
  "sniffio>=1.3",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "orjson>=3.9",
  "httpx>=0.26",
  "requests>=2.32.4",
  "rich>=13.7",
  "tqdm>=4.66.3",
  "matplotlib>=3.8",
  "seaborn>=0.12",
  "pillow>=12.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pylint>=3.0",
  "flake8>=7.0",
  "black>=24.0",
  "isort>=5.13",
  "autoflake>=2.3",
  "build>=1.2",
  "loguru>=0.7"
]

[project.urls]
Homepage = "https://secwexen.github.io/aapp-mart/"
Documentation = "https://github.com/secwexen/aapp-mart/wiki"
Repository = "https://github.com/secwexen/aapp-mart"

[project.entry-points.console_scripts]
aappmart = "aappmart.main:main"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
aappmart = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.md", "**/*.txt"]

[tool.pytest.ini_options]
addopts = "--cov=aappmart --cov-report=term-missing"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
